<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.translator.TranslatorViewModel">

    <data>

        <variable
            name="translatorViewModel"
            type="op.mobile.app.dev.simjd1.travelling.ui.translator.TranslatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_translate_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="@dimen/corner_radius_4dp">

            <TextView
                android:id="@+id/tv_translate_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tvTranslate"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_translation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_32"
                android:ems="10"
                android:hint="@string/translationETDesc"
                android:importantForAutofill="no"
                android:inputType="text"
                android:afterTextChanged="@{translatorViewModel::setTranslateText}" />

            <Button
                android:id="@+id/btn_translate_this"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout100dp"
                android:onClick="@{() -> translatorViewModel.getResponse(translatorViewModel.translateText)}"
                android:text="@string/translate" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_translated_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_300dp"
            android:layout_marginTop="@dimen/margin_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_view_translate_edit_text"
            app:layout_constraintTop_toBottomOf="@id/card_view_translate_edit_text"
            card_view:cardCornerRadius="@dimen/corner_radius_4dp">

            <TextView
                android:id="@+id/tv_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{translatorViewModel.response.text[0]}"
                android:textSize="@dimen/textSize_50sp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>